BITS-93: plantillas de correo versionadas (bienvenida y verificación)
